--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3", 
+    "graphql":"^16.8.1",
+    "apollo-server-express":"^3.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
